Change transaction to request

--- a/design/wireframe/admin/employees.html
+++ b/design/wireframe/admin/employees.html
@@ -16,57 +16,90 @@
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                </td>
             </tr>
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                </td>
             </tr>
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                </td>
             </tr>
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                </td>
             </tr>
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                </td>
             </tr>
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                </td>
             </tr>
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                </td>
             </tr>
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                </td>
             </tr>
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                </td>
             </tr>
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                </td>
             </tr>
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                </td>
             </tr>
         </tbody>
     </table>
