--- a/design/wireframe/admin/requests.html
+++ b/design/wireframe/admin/requests.html
@@ -8,54 +8,61 @@
 <body>
     <table>
         <thead>
-            <th>From</th>
-            <th>To</th>
-            <th>Amount</th>
-            <th>Currency</th>
+            <th>Employee</th>
+            <th>Costumer</th>
+            <th>Title</th>
             <th>Status</th>
+            <th>Action</th>
         </thead>
         <thead>
             <tr>
                 <td>gspaid</td>
                 <td>alto</td>
-                <td>1,000,000,000,000,000,000,000</td>
-                <td>$</td>
+                <td>TOEFL Exam</td>
                 <td>Quit Done</td>
+                <td><a href="single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>alto</td>
-                <td>1,000,000,000,000,000,000,000</td>
-                <td>$</td>
+                <td>TOEFL Exam</td>
                 <td>Quit Done</td>
+                <td><a href="single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>alto</td>
-                <td>1,000,000,000,000,000,000,000</td>
-                <td>$</td>
+                <td>TOEFL Exam</td>
                 <td>Quit Done</td>
+                <td><a href="single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>alto</td>
-                <td>1,000,000,000,000,000,000,000</td>
-                <td>$</td>
+                <td>TOEFL Exam</td>
                 <td>Quit Done</td>
+                <td><a href="single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>alto</td>
-                <td>1,000,000,000,000,000,000,000</td>
-                <td>$</td>
+                <td>TOEFL Exam</td>
                 <td>Quit Done</td>
+                <td><a href="single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>alto</td>
-                <td>1,000,000,000,000,000,000,000</td>
-                <td>$</td>
+                <td>TOEFL Exam</td>
                 <td>Quit Done</td>
+                <td><a href="single_request.html">Details</a></td>
+            </tr>
+            <tr>
+                <td>gspaid</td>
+                <td>alto</td>
+                <td>TOEFL Exam</td>
+                <td>Quit Done</td>
+                <td><a href="single_request.html">Details</a></td>
             </tr>
         </thead>
     </table>
