--- a/design/wireframe/admin/single_user.html
+++ b/design/wireframe/admin/single_user.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>User details</title>
 </head>
 <body>
-
+    <form>
+        <label for="first_name">First Name</label>
+        <input id="first_name">
+        <label for="last_name">Last Name</label>
+        <input id="last_name">
+        <label for="type">Type</label>
+        <select id="type">
+            <option value="employee">Employee</option>
+            <option value="employee">Admin</option>
+            <option value="employee">Employee</option>
+        </select>
+    </form>
 </body>
 </html>
