--- a/design/wireframe/admin/costumers.html
+++ b/design/wireframe/admin/costumers.html
@@ -16,58 +16,58 @@
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                    <a href="upgraded.html">Make Employee</a>
+                </td>
             </tr>
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                    <a href="upgraded.html">Make Employee</a>
+                </td>
             </tr>
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                    <a href="upgraded.html">Make Employee</a>
+                </td>
             </tr>
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                    <a href="upgraded.html">Make Employee</a>
+                </td>
             </tr>
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                    <a href="upgraded.html">Make Employee</a>
+                </td>
             </tr>
             <tr>
                 <td>alto</td>
                 <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
+                <td>
+                    <a href="banned.html">Ban</a>
+                    <a href="single_user.html">Details</a>
+                    <a href="upgraded.html">Make Employee</a>
+                </td>
             </tr>
-            <tr>
-                <td>alto</td>
-                <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
-            </tr>
-            <tr>
-                <td>alto</td>
-                <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
-            </tr>
-            <tr>
-                <td>alto</td>
-                <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
-            </tr>
-            <tr>
-                <td>alto</td>
-                <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
-            </tr>
-            <tr>
-                <td>alto</td>
-                <td>...</td>
-                <td><a href="banned.html">Ban</a></td>
-            </tr>
+
         </tbody>
     </table>
 </body>
