Add activity filter in wireframe

--- a/design/wireframe/admin/dashboard.html
+++ b/design/wireframe/admin/dashboard.html
@@ -50,6 +50,22 @@
                             <td>Great things are happening in your company my lord!</td>
                         </tr>
                         </tbody>
+                        <tfoot>
+                            <tr>
+                                <td>
+                                    <h3>Filter By:</h3>
+                                </td>
+                                <td>
+                                    <form>
+                                        <label for="username">User</label>
+                                        <select name="username" id="username">
+                                            <option value="alto">alto</option>
+                                            <option value="gspaid">gspaid</option>
+                                        </select>
+                                    </form>
+                                </td>
+                            </tr>
+                        </tfoot>
                     </table>
                 </td>
             </tr>
