--- a/design/wireframe/Customer/accountCreated.html
+++ b/design/wireframe/Customer/accountCreated.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SignupLogin</title>
+    <title>accountcreated</title>
 </head>
 <strong>YOUR ACCOUNT HAS BEEN CREATED</strong>
 <br><br>
