--- a/design/wireframe/Customer/signupLogin.html
+++ b/design/wireframe/Customer/signupLogin.html
@@ -14,6 +14,9 @@
  	<label for="lastName">Last name</label>
         <input type="string" id="lastName">
 	<br><br>
+ 	<label for="username">Username</label>
+        <input type="string" id="username">
+	<br><br>
  	<label for="phoneNumber">Phone number</label>
         <input type="string" id="phoneNumber">
 	<br><br>
