other single transactions

--- a/design/wireframe/admin/requests.html
+++ b/design/wireframe/admin/requests.html
@@ -20,49 +20,49 @@
                 <td>alto</td>
                 <td>TOEFL Exam</td>
                 <td>Quit Done</td>
-                <td><a href="single_request.html">Details</a></td>
+                <td><a href="../employee/single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>alto</td>
                 <td>TOEFL Exam</td>
                 <td>Quit Done</td>
-                <td><a href="single_request.html">Details</a></td>
+                <td><a href="../employee/single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>alto</td>
                 <td>TOEFL Exam</td>
                 <td>Quit Done</td>
-                <td><a href="single_request.html">Details</a></td>
+                <td><a href="../employee/single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>alto</td>
                 <td>TOEFL Exam</td>
                 <td>Quit Done</td>
-                <td><a href="single_request.html">Details</a></td>
+                <td><a href="../employee/single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>alto</td>
                 <td>TOEFL Exam</td>
                 <td>Quit Done</td>
-                <td><a href="single_request.html">Details</a></td>
+                <td><a href="../employee/single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>alto</td>
                 <td>TOEFL Exam</td>
                 <td>Quit Done</td>
-                <td><a href="single_request.html">Details</a></td>
+                <td><a href="../employee/single_request.html">Details</a></td>
             </tr>
             <tr>
                 <td>gspaid</td>
                 <td>alto</td>
                 <td>TOEFL Exam</td>
                 <td>Quit Done</td>
-                <td><a href="single_request.html">Details</a></td>
+                <td><a href="../employee/single_request.html">Details</a></td>
             </tr>
         </thead>
     </table>
