imporve in customer wireframe

--- a/design/wireframe/Customer/dashboard.html
+++ b/design/wireframe/Customer/dashboard.html
@@ -14,7 +14,7 @@
                         <tr><td><a href="profile.html">Profile</a></td></tr>
                         <tr><td><a href="onlineWallet.html">Wallet</a></td></tr>
                         <tr><td><a href="transactions.html">Transactions</a></td></tr>
-      
+               		<tr><td><a href="transactionsHistory.html">Transactions History</a></td></tr>
                         <tr><td><a href="dashboard.html">Log</a></td></tr>
                         </tbody>
                     </table>
