--- a/design/wireframe/customer/profile.html
+++ b/design/wireframe/customer/profile.html
@@ -20,7 +20,7 @@
                     </table>
                 </td>
                 <td width="80%">
-                       <form>
+                       <form action="changed_profile.html">
         <label for="firstName">First name</label>
         <input type="string" id="firstName">
 	<br><br>
@@ -34,7 +34,7 @@
         <input type="string" id="email">
 	<br><br>
 <label for="notification">Notification</label>
-        <select id="type">
+        <select id="notification">
             <option value="Email">Email</option>
             <option value="SMS">SMS</option>
         </select>
