--- a/design/wireframe/customer/change_password.html
+++ b/design/wireframe/customer/change_password.html
@@ -6,7 +6,7 @@
 </head>
 <br><br>
 <body>
-    <form method="get" action="changedPassword.html">
+    <form method="get" action="changed_password.html">
  	<label for="oldpassword">Old Password</label>
         <input type="password" id="oldpassword">
 	<br><br>
