--- a/design/wireframe/customer/profile.html
+++ b/design/wireframe/customer/profile.html
@@ -41,7 +41,7 @@
 	<br><br>
         <input type="submit" value="CHANGE PROFILE">
     </form>
-    <form method="get" action="changePassword.html">
+    <form method="get" action="change_password.html">
         <input type="submit" value="CHANGE PASSWORD">
     </form>
                 </td>
