--- a/design/wireframe/customer/signup_login.html
+++ b/design/wireframe/customer/signup_login.html
@@ -7,7 +7,7 @@
 <strong>CREATE YOUR ACCOUNT</strong>
 <br><br>
 <body>
-    <form method="get" action="accountCreated.html">
+    <form method="get" action="account_created.html">
         <label for="firstName">First name</label>
         <input type="string" id="firstName">
 	<br><br>
