--- a/design/wireframe/customer/dashboard.html
+++ b/design/wireframe/customer/dashboard.html
@@ -14,7 +14,7 @@
                         <tr><td><a href="profile.html">Profile</a></td></tr>
                         <tr><td><a href="onlineWallet.html">Wallet</a></td></tr>
                         <tr><td><a href="new_request.html">Requests</a></td></tr>
-               		<tr><td><a href="requestsHistory.html">Requests History</a></td></tr>
+               		<tr><td><a href="requests_history.html">Requests History</a></td></tr>
                         <tr><td><a href="dashboard.html">Log</a></td></tr>
                         </tbody>
                     </table>
