Add salary modification.

--- a/design/wireframe/admin/changed_user.html
+++ b/design/wireframe/admin/changed_user.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Upgrade</title>
+    <title>Changed User</title>
 </head>
 <body>
-    <h2>User upgraded successfully!</h2>
+    <h2>Changed user successfully!</h2>
 </body>
 </html>
