--- a/design/wireframe/admin/costumers.html
+++ b/design/wireframe/admin/costumers.html
@@ -19,7 +19,7 @@
                 <td>
                     <a href="banned.html">Ban</a>
                     <a href="single_user.html">Details</a>
-                    <a href="upgraded.html">Make Employee</a>
+                    <a href="changed_user.html">Make Employee</a>
                 </td>
             </tr>
             <tr>
@@ -28,7 +28,7 @@
                 <td>
                     <a href="banned.html">Ban</a>
                     <a href="single_user.html">Details</a>
-                    <a href="upgraded.html">Make Employee</a>
+                    <a href="changed_user.html">Make Employee</a>
                 </td>
             </tr>
             <tr>
@@ -37,7 +37,7 @@
                 <td>
                     <a href="banned.html">Ban</a>
                     <a href="single_user.html">Details</a>
-                    <a href="upgraded.html">Make Employee</a>
+                    <a href="changed_user.html">Make Employee</a>
                 </td>
             </tr>
             <tr>
@@ -46,7 +46,7 @@
                 <td>
                     <a href="banned.html">Ban</a>
                     <a href="single_user.html">Details</a>
-                    <a href="upgraded.html">Make Employee</a>
+                    <a href="changed_user.html">Make Employee</a>
                 </td>
             </tr>
             <tr>
@@ -55,7 +55,7 @@
                 <td>
                     <a href="banned.html">Ban</a>
                     <a href="single_user.html">Details</a>
-                    <a href="upgraded.html">Make Employee</a>
+                    <a href="changed_user.html">Make Employee</a>
                 </td>
             </tr>
             <tr>
@@ -64,7 +64,7 @@
                 <td>
                     <a href="banned.html">Ban</a>
                     <a href="single_user.html">Details</a>
-                    <a href="upgraded.html">Make Employee</a>
+                    <a href="changed_user.html">Make Employee</a>
                 </td>
             </tr>
 
