--- a/design/wireframe/admin/single_user.html
+++ b/design/wireframe/admin/single_user.html
@@ -5,7 +5,7 @@
     <title>User details</title>
 </head>
 <body>
-    <form>
+    <form action="changed_user.html">
         <label for="first_name">First Name</label>
         <input id="first_name">
         <label for="last_name">Last Name</label>
@@ -16,6 +16,9 @@
             <option value="employee">Admin</option>
             <option value="employee">Employee</option>
         </select>
+        <label for="salary">Salary</label>
+        <input name="salary" id="salary">
+        <input type="submit">
     </form>
 </body>
 </html>
