--- a/design/wireframe/general/home.html
+++ b/design/wireframe/general/home.html
@@ -12,7 +12,7 @@
         </h1>
         <a href="rules.html">Rules</a>
         <a href="../customer/dashboard.html">Dashboard</a>
-        <a href="../admin/dashboard.html">(Admin Dashboagrd)</a>
+        <a href="../admin/dashboard.html">(Admin Dashboard)</a>
         <a href="../customer/signup_login.html">Register</a>
         <a href="../customer/login.html">Login</a>
         <a href="../customer/profile.html">(Profile)</a>
