--- a/design/wireframe/admin/dashboard.html
+++ b/design/wireframe/admin/dashboard.html
@@ -16,7 +16,7 @@
                         <tr><td><a href="requests.html">Requests</a></td></tr>
                         <tr><td><a href="charge.html">Charge</a></td></tr>
                         <tr><td><a href="dashboard.html">Log (Dashboard)</a></td></tr>
-                        <tr><td><a href="currency_report.html">Currency Report</a></td></tr>
+                        <tr><td><a href="transactions.html">Currency Report</a></td></tr>
                         <tr><td><a href="new_request_type.html">Create New Request Type</a></td></tr>
                         </tbody>
                     </table>
