Add floor ceiling settings.

--- a/design/wireframe/admin/dashboard.html
+++ b/design/wireframe/admin/dashboard.html
@@ -18,6 +18,7 @@
                         <tr><td><a href="dashboard.html">Log (Dashboard)</a></td></tr>
                         <tr><td><a href="transactions.html">Currency Report</a></td></tr>
                         <tr><td><a href="new_request_type.html">Create New Request Type</a></td></tr>
+                        <tr><td><a href="settings.html">Settings</a></td></tr>
                         </tbody>
                     </table>
                 </td>
