--- a/design/wireframe/admin/new_request_type.html
+++ b/design/wireframe/admin/new_request_type.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../styles.css">
-    <title>Charge</title>
+    <title>new request type</title>
 </head>
 <body>
 <form method="get" action="new_request_type.html">
