--- a/design/wireframe/employee/single_request.html
+++ b/design/wireframe/employee/single_request.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../styles.css">
-    <title>Charge</title>
+    <title>request</title>
 </head>
 <body>
 <form method="get" action="single_request.html">
@@ -35,6 +35,11 @@
     <label for="action-info">employee's description</label>
     <textarea rows="8" type="text" id="action-info">canceled because lack of data, please give all data needed, or / Succeed, needed information is attached in a email sent to you</textarea>
 
+    <br>
+    <label for="status">Status</label>
+    <input type="text" id="status" readonly="readonly" value="Canceled">
+
+    <br>
     <input type="submit" value="Cancel">
     <input type="submit" value="Success">
 
