--- a/design/wireframe/Customer/online_wallet.html
+++ b/design/wireframe/Customer/online_wallet.html
@@ -6,7 +6,7 @@
     <title>online wallet</title>
 </head>
 <body>
-<form method="get" action="onlineWallet.html">
+<form method="get" action="online_wallet.html">
     <label for="Rial">Rial: </label>
     <input type="number" id="Rial" readonly="readonly" value="100000000">
 
@@ -19,7 +19,7 @@
 
 <br>
 
-<form method="get" action="onlineWallet.html">
+<form method="get" action="online_wallet.html">
     <label for="amount">Amount to charge:</label>
     <input type="number" id="amount">
     <label>Rials</label>
@@ -28,7 +28,7 @@
 
 <br>
 
-<form method="get" action="onlineWallet.html">
+<form method="get" action="online_wallet.html">
     <label for="amount2">Amount to change:</label>
     <input type="number" id="amount2">
     <select id="currency" value="$">
