--- a/documents/design/wireframe/admin/banned.html
+++ b/documents/design/wireframe/admin/banned.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h2>User banned successfully!</h2>
-    <a href="dashboard.html">Home</a>
+    <a href="../../../../management/templates/management/management_dashboard.html">Home</a>
 </body>
 </html>
