--- a/documents/design/wireframe/customer/changed_password.html
+++ b/documents/design/wireframe/customer/changed_password.html
@@ -7,7 +7,7 @@
 <strong>YOUR PASSWORD HAS BEEN CHANGED</strong>
 <br><br>
 <body>
-    <form method="get" action="dashboard.html">
+    <form method="get" action="../../../../workflow/templates/workflow/costumer_dashboard.html">
         <input type="submit" value="HOME">
     </form>
 </body>
