--- a/documents/design/wireframe/customer/changed_profile.html
+++ b/documents/design/wireframe/customer/changed_profile.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Changed profile successfully!</h1>
-    <form action="dashboard.html"><button type="submit">Home</button></form>
+    <form action="../../../../workflow/templates/workflow/costumer_dashboard.html"><button type="submit">Home</button></form>
 </body>
 </html>
