--- a/documents/design/wireframe/admin/settings_changed.html
+++ b/documents/design/wireframe/admin/settings_changed.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h2>Settings Changed Successfully!</h2>
-    <a href="dashboard.html">Home</a>
+    <a href="../../../../management/templates/management/management_dashboard.html">Home</a>
 </body>
 </html>
