Add employee check tests

--- a/documents/design/wireframe/customer/single_request.html
+++ b/documents/design/wireframe/customer/single_request.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <form method="get" action="single_request.html">
+    <p id="cost">Cost: 8463128</p>
     <label for="employee">Employee: </label>
     <input type="text" id="employee" readonly="readonly" value="SMAKH">
 
@@ -33,7 +34,7 @@
     <label for="action-info">employee's description</label>
     <textarea rows="8" type="text" id="action-info">canceled because lack of data, please give all data needed</textarea>
     <label for="status">Status</label>
-    <input type="text" id="status" readonly="readonly" value="Canceled">
+    <input type="text" name="status" id="status" readonly="readonly" value="Canceled">
 
     <br>
     <input type="submit" value="Update Info">
