Add view requests for admin

--- a/documents/design/wireframe/admin/requests.html
+++ b/documents/design/wireframe/admin/requests.html
@@ -6,6 +6,7 @@
     <title>Transactions</title>
 </head>
 <body>
+    <h2>Requests</h2>
     <table>
         <thead>
             <th>Employee</th>
