--- a/documents/design/wireframe/admin/costumers.html
+++ b/documents/design/wireframe/admin/costumers.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+    <h2>Users</h2>
     <table>
         <thead>
             <th>Username</th>
