Make templates use base

--- a/documents/design/wireframe/admin/single_user.html
+++ b/documents/design/wireframe/admin/single_user.html
@@ -5,7 +5,7 @@
     <title>User details</title>
 </head>
 <body>
-    <form action="changed_user.html">
+    <form class="ui form" action="changed_user.html">
         <label for="first_name">First Name</label>
         <input id="first_name">
         <label for="last_name">Last Name</label>
