--- a/documents/design/wireframe/customer/account_created.html
+++ b/documents/design/wireframe/customer/account_created.html
@@ -7,7 +7,7 @@
 <strong>YOUR ACCOUNT HAS BEEN CREATED</strong>
 <br><br>
 <body>
-    <form method="get" action="login.html">
+    <form class="ui form" method="get" action="login.html">
         <input type="submit" value="LOG IN">
     </form>
 </body>
