--- a/documents/design/wireframe/customer/login.html
+++ b/documents/design/wireframe/customer/login.html
@@ -7,7 +7,7 @@
 <strong>LOG IN</strong>
 <br><br>
 <body>
-    <form method="get" action="../../../../workflow/templates/workflow/costumer_dashboard.html">
+    <form class="ui form" method="get" action="../../../../workflow/templates/workflow/costumer_dashboard.html">
  	<label for="email">Email</label>
         <input type="string" id="email">
 	<br><br>
