--- a/documents/design/wireframe/customer/new_request.html
+++ b/documents/design/wireframe/customer/new_request.html
@@ -6,7 +6,7 @@
     <title>new request</title>
 </head>
 <body>
-<form method="get" action="new_request.html">
+<form class="ui form" method="get" action="new_request.html">
     <label for="title">Title: </label>
     <select id="title" value="TOEFL Exam">
         <option value="TOEFL Exam">TOEFL Exam</option>
