--- a/documents/design/wireframe/customer/signup_login.html
+++ b/documents/design/wireframe/customer/signup_login.html
@@ -7,7 +7,7 @@
 <strong>CREATE YOUR ACCOUNT</strong>
 <br><br>
 <body>
-    <form method="get" action="account_created.html">
+    <form class="ui form" method="get" action="account_created.html">
         <label for="firstName">First name</label>
         <input type="string" id="firstName">
 	<br><br>
@@ -34,7 +34,7 @@
 <br><br><br>
     <small>Already have an account?</small>
 <br><br>
-    <form method="get" action="login.html">
+    <form class="ui form" method="get" action="login.html">
         <input type="submit" value="LOG IN">
     </form>
 </body>
