--- a/documents/design/wireframe/customer/single_request.html
+++ b/documents/design/wireframe/customer/single_request.html
@@ -6,7 +6,7 @@
     <title>request</title>
 </head>
 <body>
-<form method="get" action="single_request.html">
+<form class="ui form" method="get" action="single_request.html">
     <p id="cost">Cost: 8463128</p>
     <label for="employee">Employee: </label>
     <input type="text" id="employee" readonly="readonly" value="SMAKH">
