--- a/misc/static/semantic/examples/kitchensink.html
+++ b/misc/static/semantic/examples/kitchensink.html
@@ -1158,7 +1158,7 @@ $('.button.demo .follow')
 <div class="ui teal empty circular label"></div>
 
 <div class="ui divider"></div>
-<form class="ui fluid form">
+<form class="ui form" class="ui fluid form">
   <div class="two fields">
     <div class="field">
       <input type="text" placeholder="First name">
