--- a/documents/design/wireframe/admin/charge.html
+++ b/documents/design/wireframe/admin/charge.html
@@ -5,7 +5,7 @@
     <title>Charge</title>
 </head>
 <body>
-    <form method="get" action="charged.html">
+    <form class="ui form" method="get" action="charged.html">
         <label for="amount">Amount</label>
         <input type="number" id="amount">
         <label for="currency">Currency</label>
