--- a/documents/design/wireframe/admin/settings.html
+++ b/documents/design/wireframe/admin/settings.html
@@ -5,7 +5,7 @@
     <title>Settings</title>
 </head>
 <body>
-<form action="settings_changed.html">
+<form class="ui form" action="settings_changed.html">
     <label for="max_transaction_per_day">Max Transaction Per Day</label>
     <input type="number" id="max_transaction_per_day">
     <label for="min_transaction_per_day">Max Transaction Per Day</label>
