--- a/documents/design/wireframe/employee/single_request.html
+++ b/documents/design/wireframe/employee/single_request.html
@@ -6,7 +6,7 @@
     <title>request</title>
 </head>
 <body>
-<form method="get" action="single_request.html">
+<form class="ui form" method="get" action="single_request.html">
     <label for="costumer">Costumer: </label>
     <input type="text" id="costumer" readonly="readonly" value="Alto">
 
