--- a/documents/design/wireframe/admin/charge.html
+++ b/documents/design/wireframe/admin/charge.html
@@ -13,7 +13,7 @@
             <option value="$">$</option>
             <option value="Rial">Rial</option>
         </select>
-        <input type="submit" value="Pay">
+        <input type="submit" class="ui primary button" value="Pay">
     </form>
 </body>
 </html>
