--- a/documents/design/wireframe/admin/single_user.html
+++ b/documents/design/wireframe/admin/single_user.html
@@ -18,7 +18,7 @@
         </select>
         <label for="salary">Salary</label>
         <input name="salary" id="salary">
-        <input type="submit">
+        <input type="submit" class="ui primary button">
     </form>
 </body>
 </html>
