--- a/documents/design/wireframe/customer/login.html
+++ b/documents/design/wireframe/customer/login.html
@@ -15,7 +15,7 @@
         <input type="password" id="password">
 	<br><br>
 	<input type="checkbox" name="rememberMe" value="rememberMe"> Remember me<br>
-        <input type="submit" value="LOG IN">
+        <input type="submit" class="ui primary button" value="LOG IN">
     </form>
 </body>
 </html>
