--- a/documents/design/wireframe/customer/new_request.html
+++ b/documents/design/wireframe/customer/new_request.html
@@ -29,7 +29,7 @@
     <label for="files">Zipped files</label>
     <input type="file" id="files">
 
-    <input type="submit" value="Submit">
+    <input type="submit" class="ui primary button" value="Submit">
 
 </form>
 </body>
