--- a/documents/design/wireframe/customer/signup_login.html
+++ b/documents/design/wireframe/customer/signup_login.html
@@ -29,13 +29,13 @@
  	<label for="passwordConfirmation">Password confrimation</label>
         <input type="password" id="passwordConfirmation">
 	<br><br>
-        <input type="submit" value="CREATE ACCOUNT">
+        <input type="submit" class="ui primary button" value="CREATE ACCOUNT">
     </form>
 <br><br><br>
     <small>Already have an account?</small>
 <br><br>
     <form class="ui form" method="get" action="login.html">
-        <input type="submit" value="LOG IN">
+        <input type="submit" class="ui primary button" value="LOG IN">
     </form>
 </body>
 </html>
