--- a/documents/design/wireframe/customer/single_request.html
+++ b/documents/design/wireframe/customer/single_request.html
@@ -37,7 +37,7 @@
     <input type="text" name="status" id="status" readonly="readonly" value="Canceled">
 
     <br>
-    <input type="submit" value="Update Info">
+    <input type="submit" class="ui primary button" value="Update Info">
 
 </form>
 </body>
