--- a/documents/design/wireframe/employee/single_request.html
+++ b/documents/design/wireframe/employee/single_request.html
@@ -40,8 +40,8 @@
     <input type="text" id="status" readonly="readonly" value="Canceled">
 
     <br>
-    <input type="submit" value="Cancel">
-    <input type="submit" value="Success">
+    <input type="submit" class="ui primary button" value="Cancel">
+    <input type="submit" class="ui primary button" value="Success">
 
 </form>
 </body>
