--- a/documents/design/wireframe/admin/settings.html
+++ b/documents/design/wireframe/admin/settings.html
@@ -10,7 +10,7 @@
     <input type="number" id="max_transaction_per_day">
     <label for="min_transaction_per_day">Max Transaction Per Day</label>
     <input type="number" id="min_transaction_per_day">
-    <input type="submit">
+    <input type="submit" class="ui primary button">
 </form>
 </body>
 </html>
