--- a/documents/design/wireframe/customer/account_created.html
+++ b/documents/design/wireframe/customer/account_created.html
@@ -8,7 +8,7 @@
 <br><br>
 <body>
     <form class="ui form" method="get" action="login.html">
-        <input type="submit" value="LOG IN">
+        <input type="submit" class="ui primary button" value="LOG IN">
     </form>
 </body>
 </html>
